# MyPlayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md
cmake/: MyPlayerDependencies.cmake  MyPlayerDeploy.cmake  MyPlayerQt.cmake  MyPlayerSources.cmake
src/ByteTrack/: BYTETracker.cpp  CMakeLists.txt  STrack.cpp
src/ByteTrack/include/bytetrack/: BYTETracker.h  STrack.h
src/MyPlayer/: CMakeLists.txt
src/MyPlayer/app/bootstrap/: application_bootstrap.cpp  application_bootstrap.h
src/MyPlayer/app/controller/display/: display_adjustment_controller.cpp  display_adjustment_controller.h
src/MyPlayer/app/controller/feature/: feature_manager.cpp  feature_manager.h
src/MyPlayer/app/controller/monitor/: monitor_wall_controller.cpp  monitor_wall_controller.h  monitor_wall_controller_layout.cpp  monitor_wall_controller_playback.cpp  monitor_wall_controller_workspace.cpp
src/MyPlayer/app/controller/network/: network_controller.cpp  network_controller.h
src/MyPlayer/app/controller/playback/: playback_controller.cpp  playback_controller.h
src/MyPlayer/app/controller/playlist/: playlist_manager.cpp  playlist_manager.h
src/MyPlayer/app/controller/stats/: playback_stats_controller.cpp  playback_stats_controller.h
src/MyPlayer/app/controller/subtitle/: subtitle_controller.cpp  subtitle_controller.h  subtitle_loading_controller.cpp
src/MyPlayer/app/service/: config_service.cpp  config_service.h  playback_service.cpp  playback_service.h  playback_service_interfaces.h
src/MyPlayer/app/ui/: main.cpp  my_player.cpp  my_player.h  my_player.qrc  my_player.ui  my_player_input.cpp  my_player_subtitle_ui.cpp  my_player_ui_helpers.h  slider.h
src/MyPlayer/app/view/: feature_view_qt.cpp  feature_view_qt.h  network_view_qt.cpp  network_view_qt.h  playback_view_qt.cpp  playback_view_qt.h  qt_ui_theme.cpp  qt_ui_theme.h  stats_view_qt.h  subtitle_view_qt.cpp  subtitle_view_qt.h
src/MyPlayer/common/: util.h
src/MyPlayer/common/diagnostics/: logger.cpp  logger.h
src/MyPlayer/core/ai/: ai_capability_registry.cpp  ai_capability_registry.h  ai_model_manager.cpp  ai_model_manager.h  ai_pipeline_manager.cpp  ai_pipeline_manager.h  ai_types.h  detector_capability_adapter.cpp  detector_capability_adapter.h  inference_scheduler.cpp  inference_scheduler.h  shared_ai_runtimes.cpp  shared_ai_runtimes.h  whisper_capability_adapter.cpp  whisper_capability_adapter.h
src/MyPlayer/core/archive/: archive_index_store.cpp  archive_index_store.h  archive_models.h  archive_path_policy.cpp  archive_path_policy.h  archive_query_service.cpp  archive_query_service.h  playback_proxy_transcoder.cpp  playback_proxy_transcoder.h
src/MyPlayer/core/audio/: audio_thread.cpp  audio_thread.h  resample.cpp  resample.h
src/MyPlayer/core/media/: decode.cpp  decode.h  decode_thread.cpp  decode_thread.h  demux.cpp  demux.h  demux_types.h
src/MyPlayer/core/monitor/: monitor_event_center.cpp  monitor_event_center.h  monitor_session.cpp  monitor_session.h  monitor_types.h  monitor_workspace_service.cpp  monitor_workspace_service.h
src/MyPlayer/core/player/: player_core.cpp  player_core.h
src/MyPlayer/core/recording/: recording_models.h  recording_service.cpp  recording_service.h  segment_writer.cpp  segment_writer.h  session_recorder.cpp  session_recorder.h
src/MyPlayer/core/session/: demux_thread.cpp  demux_thread.h  demux_thread_shared.h  live_stream_controller.cpp  live_stream_controller.h  media_feature_bridge.cpp  media_feature_bridge.h  packet_pump.cpp  packet_pump.h  packet_pump_buffering.cpp  packet_pump_buffering.h  packet_pump_recovery.cpp  packet_pump_startup_gate.cpp  stream_config.h  stream_session_core.cpp  stream_session_core.h  stream_session_core_controls.cpp  stream_session_core_state.cpp  stream_source_policy.cpp  stream_stats_reporter.cpp  stream_stats_reporter.h
src/MyPlayer/core/video/: anime4k_render_stage.cpp  anime4k_render_stage.h  cuda_interop_manager.cpp  cuda_interop_manager.h  video_callback.h  video_frame_bridge.cpp  video_frame_bridge.h  video_packet_pump.cpp  video_packet_pump.h  video_renderer_gl.cpp  video_renderer_gl.h  video_thread.cpp  video_thread.h
src/MyPlayer/features/asr/: whisper_pipeline.cpp  whisper_pipeline.h  whisper_thread.cpp  whisper_thread.h
src/MyPlayer/features/detector/: cuda_preprocess.cu  cuda_preprocess.h  detector_common.cpp  detector_common.h  detector_pipeline.cpp  detector_pipeline.h  detector_thread.cpp  detector_thread.h  detector_types.h
src/MyPlayer/features/subtitle/: libass_renderer.cpp  libass_renderer.h  subtitle_manager.cpp  subtitle_manager.h  subtitle_types.h
src/MyPlayer/features/upscale/: anime4k_pipeline.cpp  anime4k_pipeline.h
src/MyPlayer/features/vad/: vad_segmenter.cpp  vad_segmenter.h  vad_types.h
src/MyPlayer/ui/chrome/: player_chrome_controller.cpp  player_chrome_controller.h
src/MyPlayer/ui/monitor/: monitor_tile_widget.cpp  monitor_tile_widget.h  monitor_wall_window.cpp  monitor_wall_window.h  monitor_wall_window_layout.cpp  monitor_wall_window_state.cpp
src/MyPlayer/ui/video/: video_overlay_controller.cpp  video_overlay_controller.h  video_widget.cpp  video_widget.h
